crates/libs/frieze/tests/ui/option_of_unsupported.stderr
error: frieze: unsupported field type `u128` inside Option<...>; only the following are supported in Phase 1: i32, i64, u32, u64, f32, f64, bool, String. Future PRs will add more.
 --> tests/ui/option_of_unsupported.rs:5:8
  |
5 |     x: Option<u128>,
  |        ^^^^^^^^^^^^
