crates/libs/frieze/tests/ui/option_of_unsupported.rs
use frieze::Schema;

#[derive(Schema)]
struct S {
    x: Option<u128>,
}

fn main() {}
